[tool.poetry]
name = "image-comparison"
version = "0.1.0"
description = "Image comparison utilities"
authors = ["Korijn van Golen <korijn@gmail.com>"]
license = "MIT"
homepage = "https://github.com/pygfx/image-comparison"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.20.0"
imageio = ">=2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"
twine = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E4",
    "E5",
    "E7",
    "E9",
    "F",   # Pyflakes (default)
    "I",   # isort imports
    "N",   # pep8-naming
    "T10", # flake8-debugger
    "T20", # flake8-print
    "RUF", # ruff
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403"]
